--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
     <string name="various">头、尾和子项都支持多种类型的列表</string>
     <string name="various_child">多种子项类型的列表</string>
     <string name="binding_adapter">使用DataBinding的列表</string>
+
+    <string name="header_reset">下拉刷新</string>
+    <string name="header_pull">下拉刷新</string>
+    <string name="header_pull_over">释放立即刷新</string>
+    <string name="header_refreshing">正在刷新...</string>
+    <string name="header_completed">刷新成功</string>
 </resources>
